--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@mapbox/mapbox-gl-draw": "^1.5.0",
     "@supabase/supabase-js": "^2.58.0",
+    "@turf/boolean-point-in-polygon": "^7.2.0",
+    "@turf/helpers": "^7.2.0",
+    "maplibre-gl": "^5.7.3",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "supercluster": "^8.0.1",
     "zod": "^4.1.11"
   },
   "devDependencies": {
