--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,11 +13,11 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-
-    "baseUrl": ".",                              // ✅ add this
-    "paths": { "@/*": ["./*"] },                 // ✅ fix this (was ["../*"])
-
-    "plugins": [{ "name": "next" }]
+    "plugins": [{ "name": "next" }],
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["app/*"]  // <— key change
+    }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
