--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,3 +22,10 @@
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
+
+"compilerOptions": {
+  "baseUrl": ".",
+  "paths": {
+    "@/*": ["app/*"]
+  }
+}
