Deploy: fixes for map + filters

--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   },
   "dependencies": {
     "@mapbox/mapbox-gl-draw": "^1.5.0",
-    "@supabase/supabase-js": "^2.58.0",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.75.0",
     "@turf/boolean-point-in-polygon": "^7.2.0",
     "@turf/helpers": "^7.2.0",
+    "leaflet": "^1.9.4",
+    "leaflet-draw": "^1.0.4",
     "maplibre-gl": "^5.7.3",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-leaflet": "^5.0.0",
     "supercluster": "^8.0.1",
     "zod": "^4.1.11"
   },
@@ -26,9 +31,11 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
-    "tailwindcss": "^4",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.14",
     "typescript": "^5"
   }
 }
