Fix: use createSupabaseServer in my-listings/new page

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-leaflet": "^5.0.0",
+    "supabase": "^2.51.0",
     "supercluster": "^8.0.1",
     "zod": "^4.1.11"
   },
