--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@supabase/supabase-js": "^2.75.0",
     "@turf/boolean-point-in-polygon": "^7.2.0",
     "@turf/helpers": "^7.2.0",
+    "@types/leaflet.markercluster": "^1.5.6",
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
+    "leaflet.markercluster": "^1.5.3",
     "maplibre-gl": "^5.7.3",
     "next": "15.5.4",
     "react": "19.1.0",
