--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^2.0.1",
     "@mapbox/mapbox-gl-draw": "^1.5.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.7.0",
@@ -19,6 +20,7 @@
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
     "leaflet.markercluster": "^1.5.3",
+    "mapbox-gl": "^3.15.0",
     "maplibre-gl": "^5.7.3",
     "next": "15.5.4",
     "react": "19.1.0",
