Fix map container dimensions, bounds filtering, mobile layout, and TypeScript errors

--- a/package.json
+++ b/package.json
@@ -6,45 +6,54 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage",
+    "test:e2e": "playwright test",
+    "db:reset": "node scripts/reset-database.js",
+    "db:seed": "node scripts/seed-database.js",
+    "db:setup": "npm run db:reset && npm run db:seed",
+    "type-check": "tsc --noEmit",
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
   },
   "dependencies": {
     "@googlemaps/js-api-loader": "^2.0.1",
-    "@mapbox/mapbox-gl-draw": "^1.5.0",
+    "@googlemaps/markerclusterer": "^2.6.2",
+    "@react-google-maps/api": "^2.20.7",
+    "@stripe/stripe-js": "^8.1.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.75.0",
-    "@turf/boolean-point-in-polygon": "^7.2.0",
-    "@turf/helpers": "^7.2.0",
-    "@types/leaflet.markercluster": "^1.5.6",
-    "leaflet": "^1.9.4",
-    "leaflet-draw": "^1.0.4",
-    "leaflet.markercluster": "^1.5.3",
-    "mapbox-gl": "^3.15.0",
-    "maplibre-gl": "^5.7.3",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-leaflet": "^5.0.0",
+    "stripe": "^19.1.0",
     "supabase": "^2.51.0",
-    "supercluster": "^8.0.1",
     "zod": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@playwright/test": "^1.40.0",
     "@tailwindcss/postcss": "^4",
     "@types/google.maps": "^3.58.1",
-    "@types/leaflet": "^1.9.21",
-    "@types/leaflet-draw": "^1.0.13",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@vitejs/plugin-react": "^4.2.1",
+    "@vitest/coverage-v8": "^1.0.4",
+    "@vitest/ui": "^1.0.4",
     "autoprefixer": "^10.4.21",
     "babel-plugin-module-resolver": "^5.0.2",
+    "dotenv": "^16.3.1",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
+    "jsdom": "^23.0.1",
     "postcss": "^8.5.6",
+    "prettier": "^3.1.0",
     "tailwindcss": "^4.1.14",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^1.0.4"
   }
 }
