Fix map container dimensions, bounds filtering, mobile layout, and TypeScript errors

--- a/env.example
+++ b/env.example
@@ -1,4 +1,4 @@
-# Deal Flow Environment Variables
+# Off Axis Deals Environment Variables
 # Copy this file to .env.local and fill in your values
 
 # =============================================================================
@@ -105,7 +105,7 @@ DATABASE_URL=postgresql://...
 # Vercel deployment URL
 VERCEL_URL=your-app.vercel.app
 # Custom domain (optional)
-NEXT_PUBLIC_APP_URL=https://your-domain.com
+NEXT_PUBLIC_APP_URL=https://offaxisdeals.com
 
 # =============================================================================
 # THIRD-PARTY INTEGRATIONS
