Fix map container dimensions, bounds filtering, mobile layout, and TypeScript errors

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,7 @@
     "plugins": [{ "name": "next" }],
     "baseUrl": ".",
     "paths": {
-      "@/*": ["app/*"],
-      "@/lib/*": ["lib/*"]
+      "@/*": ["app/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
