Fix map container dimensions, bounds filtering, mobile layout, and TypeScript errors

--- a/env.example
+++ b/env.example
@@ -29,16 +29,35 @@ STRIPE_WEBHOOK_SECRET=whsec_...
 # =============================================================================
 # EMAIL SERVICE (REQUIRED FOR NOTIFICATIONS)
 # =============================================================================
-# Choose one: Resend, Postmark, SendGrid, or AWS SES
+# Choose one: 'smtp', 'resend', 'sendgrid', or 'console' (console just logs, for development)
+EMAIL_SERVICE=smtp
+
+# =============================================================================
+# SMTP CONFIGURATION (Required if using EMAIL_SERVICE=smtp)
+# =============================================================================
+# SMTP server details from your email provider
+SMTP_HOST=mail.privateemail.com
+SMTP_PORT=465              # 465 for SSL/TLS, 587 for STARTTLS
+SMTP_SECURE=true           # true for 465, false for 587
+SMTP_USER=customerservice@offaxisdeals.com
+SMTP_PASS=your-mailbox-password
+
+# Email identity configuration
+SMTP_FROM="Off Axis Deals Support <customerservice@offaxisdeals.com>"
+SMTP_REPLY_TO=customerservice@offaxisdeals.com
+
+# Application email addresses
+SUPPORT_EMAIL=customerservice@offaxisdeals.com
+SALES_EMAIL=sales@offaxisdeals.com
+NOREPLY_EMAIL=noreply@offaxisdeals.com
+
+# =============================================================================
+# ALTERNATIVE EMAIL SERVICES (Optional, if not using SMTP)
+# =============================================================================
+# Resend (recommended alternative to SMTP)
 RESEND_API_KEY=re_...
-# OR
-POSTMARK_API_TOKEN=your-postmark-token
-# OR
+# OR SendGrid
 SENDGRID_API_KEY=SG...
-# OR
-AWS_SES_ACCESS_KEY_ID=AKIA...
-AWS_SES_SECRET_ACCESS_KEY=...
-AWS_SES_REGION=us-east-1
 
 # =============================================================================
 # AI SERVICE (REQUIRED FOR AI ANALYZER)
