--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.75.0",
+    "@types/nodemailer": "^7.0.3",
     "next": "15.5.4",
+    "nodemailer": "^7.0.10",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "stripe": "^19.1.0",
