Fix build errors: november pre deploy testing

--- a/env.example
+++ b/env.example
@@ -121,10 +121,13 @@ DATABASE_URL=postgresql://...
 # =============================================================================
 # DEPLOYMENT
 # =============================================================================
-# Vercel deployment URL
-VERCEL_URL=your-app.vercel.app
-# Custom domain (optional)
+# Production domain (REQUIRED for Stripe, email links, etc.)
+# Set this to your production domain in Vercel environment variables
 NEXT_PUBLIC_APP_URL=https://offaxisdeals.com
+
+# Note: VERCEL_URL is automatically set by Vercel at build time
+# Do not override this - it's used for preview deployments
+# Production should always use NEXT_PUBLIC_APP_URL above
 
 # =============================================================================
 # THIRD-PARTY INTEGRATIONS
