--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "db:reset": "node scripts/reset-database.js",
     "db:seed": "node scripts/seed-database.js",
     "db:setup": "npm run db:reset && npm run db:seed",
+    "vercel:verify-domain": "tsx scripts/vercel-verify-domain.ts",
+    "stripe:bootstrap": "tsx scripts/stripe-bootstrap.ts",
     "type-check": "tsc --noEmit",
     "format": "prettier --write .",
     "format:check": "prettier --check ."
@@ -55,6 +57,7 @@
     "postcss": "^8.5.6",
     "prettier": "^3.1.0",
     "tailwindcss": "^4.1.14",
+    "tsx": "^4.7.0",
     "typescript": "^5",
     "vitest": "^1.0.4"
   }
